# algo-patterns

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose-backend.yml  docker-compose-fe.yml  docker-compose.yml  external_debug_log.md  pyproject.toml
TerminalGif/: animation_frame_runner.py  bees_and_bomb.py
ToDOs/: 20205-03-16.md
backend/: Dockerfile  Dockerfile.simple  app.py  pyproject.toml  requirements.txt
backend/prodebug/: __init__.py  line_debugger.py  run_example.py  visualizer_utils.py
codeVisDebunk/: external_debug_log.md  pyproject.toml
codeVisDebunk/codevisdebunk/: 2025_03_09_importing.py  2025_03_16_hacker.py  2_Ad_substack_post.py  bees_and_bomb_short.py  image_proc.py  poc_debug_viz.py  poc_importing.py  poc_importing1.py  terminal_animation.py
codeVisDebunk/tests/: test_codevisdebunk.py
minimal-fe/: Dockerfile  nginx.conf  package-lock.json  vite.config.js
minimal-fe/src/: AlgoViz.jsx  Archived.jsx  BarChart.jsx  BinaryViz.jsx  CodeVisualization.jsx  DynamicProgrammingViz.jsx  MainPage.jsx  Utils.jsx  main.jsx  styles.css
minimal-fe/src/pages/: BeesAndombs.jsx  ColorfulGrid.jsx  DailyVisPage.jsx  EmergentSystem.jsx  MinimalistPixels.jsx  NewPage.jsx  SinusAnimation.jsx
patterns/two-pointers/: README.md
website/: README.md
