[tool.poetry]
name = "algo-patterns"
version = "0.1.0"
description = ""
authors = ["Amineh Dadsetan <amineh.dadsetan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
ipython = "^8.32.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
