[tool.poetry]
name = "algo-patterns"
version = "0.1.0"
description = "API server for algorithm debugging and visualization"
authors = ["Your Name <your.email@example.com>"]
packages = [
    {include = "prodebug"}
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.7"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
