[tool.poetry]
name = "codeVisDebunk"
version = "0.1.0"
description = ""
authors = ["Amineh Dadsetan <amineh.dadsetan@gmail.com>"]


[tool.poetry.scripts]
algo-viz = "codevisdebunk.2025_03_09_importing:main"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.32.0"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

